# svelte-module-federation

./: README.md
contact/: .gitignore  package-lock.json  package.json  webpack.config.js
contact/public/: index.html
contact/src/: App.svelte  main.ts
contact/src/components/: Form.svelte  Social.svelte
contact/src/styles/: bootstrap.scss
food/: package.json  webpack.config.js
food/public/: index.html
food/src/: App.svelte  main.ts
food/src/components/: Food.svelte  Foods.svelte
food/src/services/: FoodService.ts
food/src/styles/: bootstrap.scss
food/src/types/: Food.ts
menu/: package-lock.json  package.json  webpack.config.js
menu/public/: index.html
menu/src/: App.svelte  Test.svelte
menu/src/components/: Menu.svelte  Spinner.svelte
restaurant/: index.html  package-lock.json  package.json  vite.config.js
restaurant/src/: App.vue
restaurant/src/components/: Contact.vue  Message.vue
welcome/: README.md  app.py  pyproject.toml
welcome/templates/: index.html
