[tool.poetry]
name = "welcome"
version = "0.1.0"
description = ""
authors = ["micschwarz <contact@micschwarz.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
dev = "app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
